2000-06-19  Tom Yu  <tlyu@mit.edu>

	* krshd.c (recvauth): Call krb5_recvauth_version() rather than
	calling krb5_recvauth() with arguments intended for
	krb5_recvauth_version().

	* kcmd.c: Conditionalize krb_sendauth prototype based on sense of
	KRB5_KRB4_COMPAT.

2000-06-15  Tom Yu  <tlyu@mit.edu>

	* login.c (try_convert524): Add use_ccache argument.  Handle case
	where we have gotten v5 creds via password being entered and don't
	crash in that case, since previous code was assuming that v5 creds
	were always being provided.  Adapted from patch by Bob Basch.

2000-06-10  Ken Raeburn  <raeburn@mit.edu>

	* krcp.c (main): Fix logic again, this time in the "success"
	case.  If there's a problem retrieving the new-protocol subkey,
	print a message and exit, don't fall back.
	* krsh.c (main): Ditto; don't look at enctype to try to guess
	protocol version.  Delete unused variable "similar".

2000-06-09  Ken Raeburn  <raeburn@mit.edu>

	* krlogin.c (main): Rework fallback logic.  Fall back to k4cmd
	unless encryption and the new protocol were both requested.

	* krsh.c (main): Rework fallback logic.  Fall back to k4cmd if new
	protocol wasn't requested.

	* krcp.c (main): Revert setting of AP_OPTS_MUTUAL_REQUIRED
	unconditionally, which was added by mistake with last set of
	patches.  If kcmd fails and the new protocol is requested, don't
	fall back to v4.

2000-05-31  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in (kcmd.o, krcp.o, krlogin.o, krlogind.o, krsh.o,
	krshd.o): Depend on defines.h.
	* krlogind.c: Include defines.h.
	* krcp.c: Ditto.

	* defines.h (enum kcmd_proto): New type.
	(rcmd_stream_read, rcmd_stream_write, getport,
	rcmd_stream_init_krb5): Add prototypes.

	* kcmd.c (use_ivecs): New variable.
	(encivec_i, encivec_o): Each is now an array of two elements.
	(input, output, twrite, krb5_write_message, krb5_net_read,
	krb5_net_write, krb_sendauth): Add prototypes.
	(kcmd): New argument PROTONUMP points to enum kcmd_proto.  If